add folder section for display all the note in that folder

--- a/index.html
+++ b/index.html
@@ -43,40 +43,54 @@
                 <a data-show="all" href="#" class="nav-link active">All</a>
                 <a data-show="folder" href="#" class="nav-link">Folder</a>
             </nav>
-            <div class="main-content__view-port">
-                <div class="main-content show-note">
-                    <div class="note-wrapper content-active">
-                        <ul class="note-list ">
-                            <li class="message">There isn't any note yet !</li>
-                            <li class="gutter-sizer"></li>
-                            <!-- <li class="note">
-                                <h1 class="note__title">Title</h1>
-                                <p class="note__content">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi debitis dolorum esse dolorem odio! Enim ullam qui saepe voluptate exercitationem libero minima dolor optio. Quasi repellat ipsa facere reiciendis cumque!
-                                </p>
-                                <div class="note__bottom">
-                                    <span class="note__time">12 Jan</span>
-                                    <a href="#" class="note__tag">Tag</a>
-                                </div>
-                            </li> -->
-                        </ul>
+            <div class="main-content show-note">
+                <section class="note-wrapper content-active">
+                    <ul class="note-list ">
+                        <li class="message">There isn't any note yet !</li>
+                        <li class="gutter-sizer"></li>
+                        <!-- <li class="note">
+                            <h1 class="note__title">Title</h1>
+                            <p class="note__content">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi debitis dolorum esse dolorem odio! Enim ullam qui saepe voluptate exercitationem libero minima dolor optio. Quasi repellat ipsa facere reiciendis cumque!
+                            </p>
+                            <div class="note__bottom">
+                                <span class="note__time">12 Jan</span>
+                                <a href="#" class="note__tag">Tag</a>
+                            </div>
+                        </li> -->
+                    </ul>
 
-                    </div>
-                    <div class="folder-wrapper">
-                        <ul class="folder-list">
-                            <li class="gutter-sizer"></li>
-                            <li class="message">
-                                You haven't create any folder yet !
-                            </li>
-                            <!-- <li id="test"  class="folder">
-                                <img src="img/folder.png" alt="">
-                                <span class="folder__title">test dkowd owjdoa daw dwa dwa dwa dawdwa</span>
-                            </li> -->
+                </section>
+                <section class="folder-wrapper">
+                    <ul class="folder-list">
+                        <li class="gutter-sizer"></li>
+                        <li class="message">
+                            You haven't create any folder yet !
+                        </li>
+                        <!-- <li id="test"  class="folder">
+                            <img src="img/folder.png" alt="">
+                            <span class="folder__title">test dkowd owjdoa daw dwa dwa dwa dawdwa</span>
+                        </li> -->
 
-                        </ul>
-                    </div>
-
-                </div>
+                    </ul>
+                </section>
+                <section class="folder-section">
+                    <h2 class="folder-section__title">Folder Title</h2>
+                    <ul class="folder-section__list ">
+                        <li class="message">You haven't add any note in this folder yet !</li>
+                        <li class="gutter-sizer"></li>
+                        <!-- <li class="note">
+                            <h1 class="note__title">Title</h1>
+                            <p class="note__content">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi debitis dolorum esse dolorem odio! Enim ullam qui saepe voluptate exercitationem libero minima dolor optio. Quasi repellat ipsa facere reiciendis cumque!
+                            </p>
+                            <div class="note__bottom">
+                                <span class="note__time">12 Jan</span>
+                                <a href="#" class="note__tag">Tag</a>
+                            </div>
+                        </li> -->
+                    </ul>
+                </section>
             </div>
             <section class="add-note-overlay">
                 <div class="add-note-wrapper">
