--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                     <a id="show-delete" class="delete" href="#">
                         <i class="fa fa-trash" aria-hidden="true"></i>
                     </a>
-                    <a href="#" class="active theme">
-                        <i class="fas fa-moon    "></i>
-                        <i class="fas fa-sun    "></i>
+                    <a href="#" onclick="switchTheme()" class="active theme">
+                        <i class="fas fa-moon icon-dark"></i>
+                        <i class="fas fa-sun icon-light"></i>
                     </a>
 
                 </nav>
@@ -99,6 +99,32 @@
                         <div class="form-group">
                             <label for="tag">Tag</label>
                             <input required id="note-tag"  type="text" name="tag" class="input-field">
+                        </div>
+                        <div class="form-group color-wrapper">
+                            <label>Note Color</label>
+                            <ul class="color-picker">
+                                <li data-color="white">
+                                    <span class="outline"></span>
+                                    <span class="circle"></span>
+                                </li>
+                                <li data-color="black">
+                                    <span class="outline"></span>
+                                    <span class="circle"></span>
+                                </li>
+                                <li data-color="yellow">
+                                    <!-- <span class="outline"></span> -->
+                                    <span class="circle"></span>
+                                </li>
+                                <li data-color="bluesky">
+                                    <span class="outline"></span>
+                                    <span class="circle"></span>
+                                </li>
+                                <li data-color="green">
+                                    <span class="outline"></span>
+                                    <span class="circle"></span>
+                                </li>
+
+                            </ul>
                         </div>
                         <div class="form-group btn-group">
                             <input id="add_note" type="submit" class="submit-content form-btn " value="Add">
