need to restructure javascript file before moving on with isotope layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="flaticon/font/flaticon.css">
 
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/test.css">
     <!-- FONT  -->
     <link href="https://fonts.googleapis.com/css2?family=Redressed&family=Poppins:wght@200;400;500;600;700;800&display=swap" rel="stylesheet">
 
@@ -39,15 +40,17 @@
                 <a data-show="folder" href="#" class="nav-link">Folder</a>
             </nav>
             <section data-content="note" class="main-content">
+                <span class="message">There isn't any note yet !!!</span>
+                <div class="folder-section__title">
+                    <h2>Folder Title</h2>
+                    <span class="return_folder">
+                        <i class="fas fa-undo-alt    "></i>
+                    </span>
+                </div>
                 <section class="list-wrapper">
                     <ul class="list">
-                        <li class="folder-section__title">
-                            <h2>Folder Title</h2>
-                            <span class="return_folder">
-                                <i class="fas fa-undo-alt    "></i>
-                            </span>
-                        </li>
-                        <li class="message">There isn't any note yet !!!</li>
+
+
                         <!-- <li class="gutter-sizer"></li> -->
                     </ul>
                 </section>
@@ -215,7 +218,7 @@
         </div>
     </div>
     <!-- <script src="js/demo.js"></script> -->
-    <!-- <script src="js/isotope/isotope.js"></script> -->
+    <script src="js/isotope/isotope.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
