--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="flaticon/font/flaticon.css">
 
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link rel="stylesheet" href="css/test.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/test.css"> -->
     <!-- FONT  -->
     <link href="https://fonts.googleapis.com/css2?family=Redressed&family=Poppins:wght@200;400;500;600;700;800&display=swap" rel="stylesheet">
 
@@ -218,7 +218,8 @@
         </div>
     </div>
     <!-- <script src="js/demo.js"></script> -->
-    <script src="js/isotope/isotope.js"></script>
-    <script src="js/main.js"></script>
+    <!-- <script src="js/isotope/isotope.js"></script> -->
+    <!-- <script src="js/main.js"></script> -->
+    <script src="js/optimize.js"></script>
 </body>
 </html>
