finish mansory layout , problem now is fix the note load into folder section after edit note in folder section ,  the return folder section btn

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="flaticon/font/flaticon.css">
 
-    <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/test.css"> -->
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/test.css">
     <!-- FONT  -->
     <link href="https://fonts.googleapis.com/css2?family=Redressed&family=Poppins:wght@200;400;500;600;700;800&display=swap" rel="stylesheet">
 
@@ -49,9 +49,7 @@
                 <span class="message">There isn't any note yet !!!</span>
                 <section class="list-wrapper">
                     <ul class="list">
-
-
-                        <!-- <li class="gutter-sizer"></li> -->
+                        <li class="gutter-sizer"></li>
                     </ul>
                 </section>
                 <div class="content_btn-group">
@@ -218,7 +216,7 @@
         </div>
     </div>
     <!-- <script src="js/demo.js"></script> -->
-    <!-- <script src="js/isotope/isotope.js"></script> -->
+    <script src="js/isotope/isotope.js"></script>
     <!-- <script src="js/main.js"></script> -->
     <script src="js/optimize.js"></script>
 </body>
